bindings/java/src/com/onepub/revault/RevaultNativeApi.java

    lockbox_get_symlink_target = linker.downcallHandle(symbols.find("lockbox_get_symlink_target").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_id = linker.downcallHandle(symbols.find("lockbox_id").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_exists = linker.downcallHandle(symbols.find("lockbox_exists").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_is_dir = linker.downcallHandle(symbols.find("lockbox_is_dir").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_permissions = linker.downcallHandle(symbols.find("lockbox_permissions").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_set_permissions = linker.downcallHandle(symbols.find("lockbox_set_permissions").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_INT));
    lockbox_read_range = linker.downcallHandle(symbols.find("lockbox_read_range").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG, ValueLayout.JAVA_LONG));
    lockbox_recovery_scan = linker.downcallHandle(symbols.find("lockbox_recovery_scan").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_recovery_salvage = linker.downcallHandle(symbols.find("lockbox_recovery_salvage").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    lockbox_add_password = linker.downcallHandle(symbols.find("lockbox_add_password").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_add_contact = linker.downcallHandle(symbols.find("lockbox_add_contact").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_delete_key = linker.downcallHandle(symbols.find("lockbox_delete_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_list_key_slots = linker.downcallHandle(symbols.find("lockbox_list_key_slots").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_set_owner_signing_key = linker.downcallHandle(symbols.find("lockbox_set_owner_signing_key").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    lockbox_owner_inspection = linker.downcallHandle(symbols.find("lockbox_owner_inspection").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_define_form = linker.downcallHandle(symbols.find("lockbox_define_form").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_list_form_definitions = linker.downcallHandle(symbols.find("lockbox_list_form_definitions").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_resolve_form = linker.downcallHandle(symbols.find("lockbox_resolve_form").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_list_form_revisions = linker.downcallHandle(symbols.find("lockbox_list_form_revisions").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_create_form_record = linker.downcallHandle(symbols.find("lockbox_create_form_record").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_set_form_field = linker.downcallHandle(symbols.find("lockbox_set_form_field").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_set_secret_form_field = linker.downcallHandle(symbols.find("lockbox_set_secret_form_field").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_list_form_records = linker.downcallHandle(symbols.find("lockbox_list_form_records").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_get_form_record = linker.downcallHandle(symbols.find("lockbox_get_form_record").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_delete_form_record = linker.downcallHandle(symbols.find("lockbox_delete_form_record").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_move_form_records = linker.downcallHandle(symbols.find("lockbox_move_form_records").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_get_form_field = linker.downcallHandle(symbols.find("lockbox_get_form_field").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    lockbox_get_secret_form_field = linker.downcallHandle(symbols.find("lockbox_get_secret_form_field").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    lockbox_to_bytes = linker.downcallHandle(symbols.find("lockbox_to_bytes").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    lockbox_free = linker.downcallHandle(symbols.find("lockbox_free").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    vault_is_running = linker.downcallHandle(symbols.find("vault_is_running").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
    vault_forget_all = linker.downcallHandle(symbols.find("vault_forget_all").orElseThrow(), FunctionDescriptor.of(ValueLayout.JAVA_BOOLEAN));
    key_contact_generate = linker.downcallHandle(symbols.find("key_contact_generate").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS));
    key_contact_from_private = linker.downcallHandle(symbols.find("key_contact_from_private").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    key_contact_public = linker.downcallHandle(symbols.find("key_contact_public").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    key_contact_private = linker.downcallHandle(symbols.find("key_contact_private").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    key_contact_public_from_bytes = linker.downcallHandle(symbols.find("key_contact_public_from_bytes").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    key_contact_public_free = linker.downcallHandle(symbols.find("key_contact_public_free").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    key_contact_free = linker.downcallHandle(symbols.find("key_contact_free").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    key_contact_encrypt = linker.downcallHandle(symbols.find("key_contact_encrypt").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    key_contact_decrypt = linker.downcallHandle(symbols.find("key_contact_decrypt").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    key_contact_wrapped_public = linker.downcallHandle(symbols.find("key_contact_wrapped_public").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    key_contact_wrapped_ciphertext = linker.downcallHandle(symbols.find("key_contact_wrapped_ciphertext").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    key_contact_wrapped_encrypted = linker.downcallHandle(symbols.find("key_contact_wrapped_encrypted").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    key_contact_wrapped_free = linker.downcallHandle(symbols.find("key_contact_wrapped_free").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    key_signing_generate = linker.downcallHandle(symbols.find("key_signing_generate").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS));
    key_signing_from_private = linker.downcallHandle(symbols.find("key_signing_from_private").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    key_signing_public = linker.downcallHandle(symbols.find("key_signing_public").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    key_signing_private = linker.downcallHandle(symbols.find("key_signing_private").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    key_signing_public_from_bytes = linker.downcallHandle(symbols.find("key_signing_public_from_bytes").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    key_signing_public_free = linker.downcallHandle(symbols.find("key_signing_public_free").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    key_signing_free = linker.downcallHandle(symbols.find("key_signing_free").orElseThrow(), FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    vault_key_export_private = linker.downcallHandle(symbols.find("vault_key_export_private").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_key_export_public = linker.downcallHandle(symbols.find("vault_key_export_public").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_key_import_private = linker.downcallHandle(symbols.find("vault_key_import_private").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_key_import_public = linker.downcallHandle(symbols.find("vault_key_import_public").orElseThrow(), FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_key_fingerprint = linker.downcallHandle(symbols.find("vault_key_fingerprint").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS));
    vault_key_format_hex = linker.downcallHandle(symbols.find("vault_key_format_hex").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_key_decode_hex = linker.downcallHandle(symbols.find("vault_key_decode_hex").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_key_format_crockford = linker.downcallHandle(symbols.find("vault_key_format_crockford").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    vault_key_format_crockford_reading = linker.downcallHandle(symbols.find("vault_key_format_crockford_reading").orElseThrow(), FunctionDescriptor.of(BUFFER, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
